<resources>
    <string name="app_name">splashScreen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp"><u>signUp</u> if you don\'t have an account</string>
    <string name="firstname">firstName</string>
    <string name="logintwo">Login</string>
    <string name="lastname">LastName</string>
    <string name="emailTwo">Email</string>
    <string name="passwordTwo">Password</string>
    <string name="confirm">Confirm</string>
    <string name="signup">SignUp</string>
    <string name="profile">Profile</string>
    <string name="track">Track</string>
    <string name="plan">Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">phone</string>
</resources>